# molviewspec-validation

./: .gitignore  BATCH_RESULTS.md  CHANGES.md  LICENSE  README.md  VALIDATION_RESULTS.md  benchmark_dataset.csv  pyproject.toml
molviewspec_validation/: __init__.py  emdb_api.py  integration.py  scenes.py  screenshot.py  va_data.py
tests/: run_validation.py  test_va_fixes.py
